arrow on upvote button

--- a/public/angular/app/partials/my-challenges.html
+++ b/public/angular/app/partials/my-challenges.html
@@ -17,7 +17,7 @@
                     </div>
               <p>{{challenge.startDate}}</p>
               <p>Upvotes: {{challenge.upvotes}}</p>
-            <button ng-click="upvote(challenge.$id)" class = "btn btn-success">Upvote</button>
+            <button ng-click="upvote(challenge.$id)" class = "btn btn-success glyphicon glyphicon-arrow-up">Upvote</button>
               </div>
         </div>
 
