--- a/public/angular/app/partials/pb-challenges.html
+++ b/public/angular/app/partials/pb-challenges.html
@@ -33,7 +33,7 @@
 				  </div>
 				</div>
         <p>Upvotes: {{challenge.upvotes}}</p>
-        <button ng-click="upvote(challenge.$id)" class = "btn btn-success">Upvote</button>
+        <button ng-click="upvote(challenge.$id)" class = "btn btn-success glyphicon glyphicon-arrow-up"></button>
 			</div>
 		</div>
 
@@ -77,7 +77,7 @@
             </div>
         <p> Start Time : <span>{{response.startDate}}</span> </p>
         <p>Upvotes: <span class="badge">{{response.upvotes}}</span></p>
-        <button ng-click="upvote(response.$id)" class = "btn btn-success">Upvote</button>
+        <button ng-click="upvote(response.$id)" class = "btn btn-success glyphicon glyphicon-arrow-up">Upvote</button>
       </div>
     </div>
 
