--- a/public/angular/app/partials/pb-challenges.html
+++ b/public/angular/app/partials/pb-challenges.html
@@ -75,7 +75,11 @@
              <source src="{{response.videoUrl}}" />
                 </video>
             </div>
-        <p> Start Time : <span>{{response.startDate}}</span> </p>
+        <div class="progress">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="{{get_completion(challenge.startDate)}}" aria-valuemin="0" aria-valuemax="1" style="width: {{get_completion(challenge.startDate)*100}}%;">
+                    <span class="sr-only">{{get_completion(challenge.startDate)*100}}% Complete</span>
+                  </div>
+        </div>
         <p>Upvotes: <span class="badge">{{response.upvotes}}</span></p>
         <button ng-click="upvote(response.$id)" class = "btn btn-success glyphicon glyphicon-arrow-up">Upvote</button>
       </div>
