add button class to respond

--- a/public/angular/app/partials/view-challenge.html
+++ b/public/angular/app/partials/view-challenge.html
@@ -12,7 +12,9 @@
 				</video>
 			</div>
 			<br />
-	    <a ng-href="#/challenge/{{challenge.$id}}/respond">Respond to this challenge!</a>
+	    <a ng-href="#/challenge/{{challenge.$id}}/respond" class="btn btn-primary">Respond to this challenge!</a>
+
+        <p></p>
 
 	    <p><span>{{getTimeRemaining(challenge.startDate,currentTime)}} hours remaining</span> </p>
     	
