updated file upload

--- a/public/angular/app/partials/create-response.html
+++ b/public/angular/app/partials/create-response.html
@@ -12,7 +12,7 @@
 
         <div class="fileUpload btn btn-default">
           <span>Record Video</span>
-          <input id="video_file_respond" name="video[file]" type="file" accept="video/*;capture=camcorder" style="width:250px;">
+          <input id="video_file_respond" class = "upload" name="video[file]" type="file" accept="video/*;capture=camcorder" style="width:250px;">
         </div>
         <br />
         <video style="display:none;margin: 0 auto;" id = "video_view_respond" width="220" height="120">
