--- a/public/angular/app/partials/create-challenge.html
+++ b/public/angular/app/partials/create-challenge.html
@@ -15,7 +15,7 @@
 
 				<div class="fileUpload btn btn-default">
 				  <span>Record Video</span>
-				  <input id="video_file" name="video[file]" type="file" accept="video/*;capture=camcorder" style="width:200px;">
+				  <input id="video_file" class = "upload" name="video[file]" type="file" accept="video/*;capture=camcorder" style="width:200px;">
 				</div>
 				<br />
 				<div style="margin: 0 auto;text-align:center;">
@@ -36,7 +36,7 @@
 			  		<input type="text" class="form-control" ng-model="newchallenge.name" />
 			  	</div>
 			  </div>
-
+				<br />
 			  <div class = "row">
 			  	<div class = "col-sm-3">
 			  	  <b>Private:</b>
