--- a/public/angular/app/partials/my-challenges.html
+++ b/public/angular/app/partials/my-challenges.html
@@ -13,9 +13,17 @@
             <div class = "video_cover">
                 <video class = "card_video" width="220" onclick="this.play();" height="120">
                      <source src="{{challenge.videoUrl}}" />
-                </video>
-            </div>
-            <p>{{challenge.startDate}}</p>
+                        </video>
+                    </div>
+              
+  <p></p>
+  <p><span>{{getTimeRemaining(challenge.startDate,currentTime)}} hours remaining</span> </p>
+
+                    <div class="progress">
+        <div class="progress-bar" role="progressbar" aria-valuenow="{{percent_complete(challenge.startDate,currentTime)}}" aria-valuemin="0" aria-valuemax="1" style="width: {{percent_complete(challenge.startDate,currentTime)*100}}%;">
+          <span class="sr-only">{{percent_complete(challenge.startDate,currentTime)*100}}% Complete</span>
+        </div>
+      </div>
 
             <p>Upvotes: {{challenge.upvotes}}</p>
             <button ng-click="upvote(challenge.$id)" class = "btn btn-success">Upvote</button>
