--- a/public/angular/app/partials/pb-challenges.html
+++ b/public/angular/app/partials/pb-challenges.html
@@ -3,9 +3,9 @@
 <h2 style="margin: -190px auto 0px auto;text-align:center;padding:20px 0px 10px 0px; color:#ffffff;text-shadow: 0px -1px 1px #666;">Challengr</h2>
 <h4 style="margin: 0px auto 10px auto;text-align:center;color:#ffffff;text-shadow: 0px -1px 1px #666;">Challenge Your Friends On Video</h4>
 
-<ul class="breadcrumb" style="opacity:0.8;width:70%;margin: 0px auto 10px auto;margin-bottom:2
+<ul class="breadcrumb" style="opacity:0.8;width:70%;margin: 20px auto 20px auto;margin-bottom:2
 40px;text-align:center;">
-	<p>Sort By : </p>
+	<span>Sort By : &nbsp;&nbsp;&nbsp;</span>
 	<li ng-click="setSort ('upvotes')" ><a>Popularity</a></li>
 	<li ng-click="setSort ('startDate')" ><a>Most Recent</a></li>
 </ul>
